# c-icap-server

./: .cvsignore  AUTHORS  BUGS  CONTRIBUTORS  Dockerfile.c-icap  INSTALL  Makefile  Makefile.am  README  RECONF  TODO  access.c  acl.c  array.c  aserver.c  atomic.c  base64.c  body.c  c-icap-config.in  c-icap-libicapapi-config.in  c-icap.conf.in  c-icap.dox  c-icap.magic  c_icap.mak  c_icap_dll.mak  cache.c  cfg_lib.c  cfg_param.c  cicapcalls.c  client.c  commands.c  common.h  config-w32.h  configure.ac  configure.in  debug.c  decode.c  default_acl.c  dlib.c  encode.c  (+34 more)
contrib/: config_to_html.pl  convert_old_magic.pl  get_file.pl
docs/man/: Makefile.am  c-icap-client.8.in  c-icap-config.8.in  c-icap-libicapapi-config.8.in  c-icap-mkbdb.8.in  c-icap-mklmdb.8.in  c-icap-stretch.8.in  c-icap.8.in
include/: access.h  acl.h  array.h  atomic.h  body.h  c-icap-conf-w32.h  c-icap-conf-w32.h.default  c-icap-conf-w32.h.in  c-icap-conf.h.in  c-icap.h  cache.h  cfg_param.h  ci_regex.h  ci_threads.h  ci_time.h  client.h  commands.h  debug.h  dlib.h  encoding.h  filetype.h  hash.h  header.h  http_server.h  log.h  lookup_table.h  md5.h  mem.h  module.h  net_io.h  net_io_ssl.h  openssl_support.h  port.h  proc_mutex.h  proc_threads_queues.h  registry.h  request.h  request_util.h  server.h  service.h  (+7 more)
modules/: Makefile.am  bdb_tables.c  dnsbl_tables.c  ldap_module.c  lmdb_tables.c  memcached.c  perl_handler.c  shared_cache.c  sys_logger.c
openssl/: build_openssl_opts.pl  net_io_ssl.c  openssl_options.c
os/: Makefile.am
os/unix/: Makefile.am  dlib.c  net_io.c  proc_mutex.c  proc_utils.c  shared_mem.c  threads.c  utilfunc.c
os/win32/: dlib.c  dll_entry.c  makefile.w32  net_io.c  proc_mutex.c  shared_mem.c  threads.c  utilfunc.c
services/: .cvsignore  Makefile.am
services/clamav/: Makefile.am  srv_clamav.c  srv_clamav.h  srv_clamav_vir.c
services/echo/: .cvsignore  Makefile.am  makefile.w32  srv_echo.c
services/ex-206/: Makefile.am  srv_ex206.c
services/sguard/: .cvsignore  Makefile.am  makefile.w32  srv_sguard.c
services/sguard/.deps/: sguard_mod.Plo  sguard_mod_la-sguard_mod.Plo  sguard_mod_so_la-sguard_mod.Plo  srv_sguard_la-srv_sguard.Plo  srv_sguard_so_la-srv_sguard.Plo
services/url_check/: Makefile.am  makefile.w32  srv_url_check.c
tests/: Makefile.am  test_allocators.c  test_arrays.c  test_atomics.c  test_atomics_cplusplus.cc  test_base64.c  test_body.c  test_cache.c  test_filetype.c  test_headers.c  test_lists.c  test_md5.c  test_ops.c  test_shared_locking.c  test_tables.c
tests/dbs/: db1.txt
utils/: Makefile.am  c-icap-client.c  c-icap-mkbdb.c  c-icap-mklmdb.c  c-icap-stretch.c  icap-client.c  icap-stretch.c  mk_bdb.c
